# plotly-DASHboard

./: Dockerfile  README.md  global_alcohol_consumption.csv  main.py  overview.ipynb  pyproject.toml
